# chip8-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yaml
chip8-core/: Cargo.toml
chip8-core/src/: chip8.rs  constants.rs  core.rs  cpu.rs  error.rs  input.rs  instructions.rs  keypad.rs  lib.rs  rwlock.rs  state.rs  util.rs
chip8-core/src/cpu/: mod.rs  simple.rs
chip8-core/src/drivers/: audio.rs  display.rs  input.rs  interrupt.rs  mod.rs
chip8-core/src/state/: mod.rs  simple.rs
chip8-tui/: Cargo.toml
chip8-tui/src/: args.rs  error.rs  main.rs  terminal.rs
chip8-tui/src/drivers/: audio.rs  display.rs  input.rs  interrupt.rs  mod.rs
src/: args.rs  constants.rs  core.rs  display.rs  input.rs  main.rs  terminal.rs
src/drivers/: audio.rs  display.rs  input.rs
