[package]
name = "chip8-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
chip8-core = { path = "../chip8-core" }
clap = { version = "4.5.4", features = ["derive"] }
crossterm = { version = "0.27.0" }
csv = { version = "1.3.0" }
rand = { workspace = true }
ratatui = { version = "0.26.2" }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "chip8"
path = "src/main.rs"
